<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/dayBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/day_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/daybackground"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/menu_button"
        android:layout_width="49dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/menu_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menubutton"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/location_icon"
        android:layout_width="17dp"
        android:layout_height="20dp"
        android:layout_marginStart="64dp"
        android:contentDescription="@string/location_icon"
        app:layout_constraintBottom_toBottomOf="@+id/location"
        app:layout_constraintStart_toEndOf="@+id/menu_button"
        app:layout_constraintTop_toTopOf="@+id/location"
        app:srcCompat="@drawable/location"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/location_text"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/location_icon"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/seg_text"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/date_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/day"
        app:layout_constraintStart_toStartOf="@+id/day"
        app:layout_constraintTop_toBottomOf="@+id/day"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>